# MVP

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mypy.ini
Linux/: .gitignore  Dockerfile  README.md
Linux/Concept/: bash.md  general.md
Linux/Sandbox/: README.md  docker-compose.yml  install_shell.sh  install_tools.sh
Linux/Sandbox/CentOS/: Dockerfile  Makefile  docker-compose.yml
Linux/Sandbox/Debian/: Dockerfile  Makefile  docker-compose.yml
Linux/Syntax/: common.md  file.md  recap.md  web.md
Linux/Utility/: README.md  prune_files.sh
Linux/sandbox/: Dockerfile
Linux/scripts/: prune_dirs.sh
Python/: .flake8  CodingConvention.md  Coding_Convention.md  README.md  init.sh  requirements.txt
Python/Concept/: general.md  import.md
Python/Logging/: README.md  application.py  custom.yaml  main.py  utility.py
Python/Packaging/: MANIFEST.in  README.md  requirements.txt  setup.py
Python/Packaging/caller/: __init__.py  entry.py
Python/Projects/: .gitignore
Python/Projects/0_Example/: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yaml  mypy.ini  requirements.txt  setup.py
Python/Projects/0_dev/: requirements.txt
Python/Projects/Boilerplate/: .pre-commit-config.yaml  .pylintrc  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
Python/Projects/Boilerplate/Data Pipeline/: .gitignore  README.md  pyproject.toml
Python/Projects/Boilerplate/Data Pipeline/dev/: ruff.toml
Python/Projects/Boilerplate/Data Pipeline/etc/cli/: downloader.yaml
Python/Projects/Boilerplate/Data Pipeline/integration/: database.yaml  setup_db.py
Python/Projects/Boilerplate/Data Pipeline/src/: __main__.py
Python/Projects/Boilerplate/Data Pipeline/src/apple/: main.py  metadata.py
Python/Projects/Boilerplate/Data Pipeline/src/berry/: main.py
Python/Projects/Boilerplate/Data Pipeline/src/connection/: database.py  ftp.py
Python/Projects/Boilerplate/Data Pipeline/tests/unit/apple/: test_main.py  test_metadata.py
Python/Projects/Boilerplate/Data Pipeline/tests/unit/connection/: test_database.py  test_ftp.py
Python/Projects/Boilerplate/Data Pipeline/tests/unit/utility/: test_config.py
Python/Projects/Boilerplate/Poe/: .gitignore  .pre-commit-config.yaml  README.md  poetry.toml  pyproject.toml  tasks.toml
Python/Projects/Boilerplate/Poe/dev/: .coveragerc  ruff.toml  tasks.toml
Python/Projects/Boilerplate/Poe/src/: __init__.py  __main__.py
Python/Projects/Boilerplate/Poe/src/utility/: demo.py
Python/Projects/Boilerplate/Poe/tests/: __init__.py
Python/Projects/Boilerplate/Poe/tests/unit/utility/: test_demo.py
Python/Projects/Calendar/: __main__.py  check.yaml
Python/Projects/Concurrency/: README.md  requirements.txt
Python/Projects/Connection/: __init__.py  requirements.txt
Python/Projects/Data Pipeline/: .gitignore  Makefile  README.md  pyproject.toml
Python/Projects/Data Pipeline/dev/: .coveragerc  Dockerfile  docker-compose.yaml  requirements.txt  ruff.toml
Python/Projects/Data Pipeline/etc/: odbcinst.ini  workspace.yaml
Python/Projects/Data Pipeline/integration/: database.yaml  setup_db.py
Python/Projects/Data Pipeline/integration/apple/: generate_records.sql
Python/Projects/Data Pipeline/integration/initialization/: database.sql  table.sql
Python/Projects/Data Pipeline/src/: __init__.py  __main__.py
Python/Projects/Data Pipeline/src/connection/: ftp.py
Python/Projects/Data Pipeline/src/utility/: __init__.py  config.py  downloading.py
Python/Projects/Data Pipeline/tests/: __init__.py
Python/Projects/Data Pipeline/tests/resource/: cli_all.yaml
Python/Projects/Data Pipeline/tests/unit/connection/: test_database.py  test_ftp.py
Python/Projects/Data Pipeline/tests/unit/utility/: test_downloading.py
Python/Projects/Logging/: README.md  __init__.py  application.py  custom.yaml  main.py  utility.py
Python/Projects/Packaging/: README.md  clean_up.sh  requirements.txt  setup.py
Python/Projects/Siting/: .gitignore  README.md  about.md  index.md  index.rst_tmp  requirements.txt  run_livereload.py
Python/Projects/Testing/: README.md  requirements.txt
Python/Snippet/: .flake8  README.md  advanced.py  basic.py  file_meta.py  regex.py  timing.py
Python/Snippet/data_structure/: README.md  basics.py  customized_heap.py  record.py
Python/Snippet/general/: basic.py
Python/Snippet/syntax/: advanced.py  basic.py  dataframe.py  file_meta.py  templating.py  timing.py
Python/Snippet/utility/: api.py  script.py
Python/Syntax/: Spark.md  dataframe.md  file.md  file_meta.md  regex.md  templating.md  timing.md
Python/Syntax/data_structure/: README.md  basic.md  basics.md  customized_heap.md  record.md
Python/Syntax/general/: advanced.md  basic.md  concept.md  intermediate.md
Python/Syntax/generic/: basic.md  dunder.md  functional programming.md  intermediate.md  oop.md
Python/Syntax/in-built/: decorator.md  file.md  regex.md  timing.md
Python/Syntax/inbuilt/: regex.md
Python/Testing/: requirements.txt
Python/Testing/core/: main.py
Python/Testing/tests/: conftest.py
Python/Tool/: Makefile  README.md  pdf.py  requirements.txt
Python/Tool/calendar/: check.yaml
Python/Tool/mailing/: __main__.py  mailing.py
Python/Tool/medium/: collected.yaml  extractor.py
Python/Tool/ocr/: Dockerfile  Makefile  README.md  docker-compose.yaml
Python/Tool/other/: id_verifier.py
Python/Tool/pdf/: .gitignore  README.md  __main__.py  opeartor.py  (+3 more)
Python/Utility/: README.md  api.py  data_generator.py  decorators.py  interval_concurrency.py  parser.py  script.py
Python/Visualization/: README.md  Visualization.ipynb
Python/dev/: requirements.txt
Template/configuration/: README.md  spaceship.zsh
Template/document/: Comparison.md
Template/dotfile/: .bashrc  .cmd_alias  .env  .vimrc  note.md
Template/local/: Makefile
Template/local-checking/: README.md
Template/local-setup/: Makefile  README.md  set_env.sh
Template/project management/: README.md
Template/script/: prune_files.sh
Template/volatile/: tmp_env.sh
dev/: mypy.ini  requirements.txt  ruff.toml
(+149 files in other folders)
