[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pipeline"
version = "0.0.0"
description = ""
authors = ["Castiel HUANG <wangyuh@alumni.cmu.edu>"]
readme = "README.md"
packages = [
    {include = "vendor", from = "src"},
    {include = "connection", from = "src"},
    {include = "utility", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.10"
poethepoet = "0.24.4"

mysql-connector-python = "^8.1.0"
paramiko = "^2.12.0"
pyodbc = "^5.1.0"
PyYAML = "^6.0.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[tool.poetry.group.test.dependencies]
pyfakefs = { version = ">=5.0.0", optional = false, extras = [] }
pytest = "^8.0.2"
pytest-cov = "~=4.0.0"
pytest-mock = ">=3.10.0"
requests-mock = "^1.11.0"


[tool.poe.tasks]
test = """
python -m pytest tests
--cov=src
--cov-config=dev/.coveragerc
--cov-report term-missing
--cov-fail-under=50
--junitxml=tests/unit/results.xml
"""
auto-format = "ruff format ./ --config dev/ruff.toml"
auto-lint = "ruff check ./ --config dev/ruff.toml"

[tool.poe.tasks.check]
sequence = ["auto-format", "auto-lint"]


# [tool.isort]
# # https://pycqa.github.io/isort/docs/configuration/profiles.html
# profile = "hug"
# src_paths = ["isort", "test"]

# [tool.mypy]
# exclude = [
#     "^one\\.py$",  # TOML's double-quoted strings require escaping backslashes
#     'two\.pyi$',  # but TOML's single-quoted strings do not
#     '^three\.',
# ]
